# ff8-battle-structure-gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
